--- a/prac11/Dockerfile
+++ b/prac11/Dockerfile
@@ -3,5 +3,5 @@ FROM tiangolo/uwsgi-nginx-flask:python3.11
 
 # 현재 디렉토리에서 ./app 내용을 컨테이너의 /app으로 복사
 COPY ./app /app
-#CMD ["uwsgi", "--ini", "uwsgi.ini"]
-CMD [ "python", "./main.py" ]
+CMD ["uwsgi", "--ini", "uwsgi.ini"]
+#CMD [ "python", "./main.py" ]
